--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -15,17 +15,7 @@ background-image: url(./user-profile.png);
 }
 
   
-  @media only screen and (max-width: 600px) {
-    #fadeshow1 {
-        display: none !important;
-        color: white !important;
-    }
-}
-  @media only screen and (min-width: 500px) {
-    #fadeshow2 {
-        display: none !important;
-    }
-}
+  
 
 #navbar{
     max-width: 100% !important;
@@ -54,13 +44,7 @@ background-image: url(./user-profile.png);
     padding-left: 10rem !important;
 }
 
-@media only screen and (max-width: 600px) {
-    #font {
-        font-size: 28px !important;
-    display: inline-block !important;
-    padding-left: 5rem !important;
-    }
-}
+
 #font #font1{
     font-family: Snell Roundhand, cursive;
     /* font-style: italic; */
@@ -130,4 +114,27 @@ background-image: url(./user-profile.png);
    height: 2.6rem;
    line-height: 2.6rem;
    margin: 0 5px 10px;
+}
+
+/* Media queries */
+
+@media only screen and (max-width: 600px) {
+    #fadeshow1 {
+        display: none !important;
+        color: white !important;
+    }
+}
+  @media only screen and (min-width: 500px) {
+    #fadeshow2 {
+        display: none !important;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    #font {
+        font-size: 28px !important;
+    display: inline-block !important;
+    padding-left: 5rem !important;
+    }
 }
