--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -2,129 +2,226 @@
     /* padding-top: 10px; */
     margin-top: 0px;
 }
+.row1{
+    padding-top: 25px;
+}
+.mid1{
+    margin-top: 60px;
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 60px;
+}
 
 .img1{
-    padding-top: 20px;
-    /* padding-right: 10px; */
+    padding-top: 60px;
+    padding-right: 60px;
     max-width: 100%;
-    /* height: auto; */
-    text-align: right;
-    /* align-items: right; */
-    /* margin-right: -5%; */
+    height: auto;
+    margin: auto;
+}
+.img2{
+    padding-top: 60px;
+    padding-left: 50px;
+    margin-left: 40px;
+    max-width: 100%;
+    height: auto;
+    margin: auto;
 }
 .container{
     max-width: 100%;
 }
 
 #intro{
-    text-align: center;
+    
     margin: auto;
-    padding: auto;
+    padding-top: 0px;
     color: rgb(2, 2, 2);
     text-transform: capitalize;
-    /* font-family: Google sans bold; */
+    padding-left: 50px;
 
 }
 
 .intro{
-    font-family: Google Sans Bold;
-    font-size: 60px;
+    /* font-family: Google Sans Bold; */
+    font-size: 70px;
     font-weight: bold;
+    margin-left: 40px;
+    
 }
-@media only screen and (max-width: 600px) {
-    .intro {
-       font-size: 30px;
-    }
+
+
+.introSubtitle{
+    font-family: "Gill Sans", sans-serif;
+    font-size: 30px;
+    margin-right: 40px;
+    line-height: 3rem;
+    padding-bottom: 10px;
+    color: #7f878f;
 }
-h1{
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    font-size: 20px;
-}
-@media only screen and (max-width: 600px) {
-    #intro {
-       padding-top: 30px;
-    }
-}
+
 .fa_icons{
-   
+    
      font-family: font-awesome;
-     font-size: 1.5em;
+     margin-left: 40px;
+     padding-top: 10px;
      
-}
+    }
+    
+    .fa_icons .insta{
+        color: white;
+        background-color: rgb(51, 47, 47);
+        border-radius: 2.6rem;
+        font-size: 1.3rem;
+        display: inline-block;
+        text-align: center;
+        margin: 10px;
+        width: 2.6rem;
+        height: 2.6rem;
+        line-height: 2.6rem;
+        margin: 0 5px 10px;
+        /* padding: 10px 14px 10px 14px; */
+        /* margin-top: 10px; */
+    }
+    .fa_icons .insta:hover{
+        background-color: rgb(0, 0, 0);
+    }
+    .fa_icons .github{
+        color: white;
+        background-color: rgb(54, 52, 52);
+        border-radius: 2.6rem;
+        font-size: 1.3rem;
+        display: inline-block;
+        text-align: center;
+        margin: 10px;
+        width: 2.6rem;
+        height: 2.6rem;
+        line-height: 2.6rem;
+        margin: 0 5px 10px;
+    }
+    
+    .fa_icons .github:hover{
+        background-color: rgb(0, 0, 0);
+    }
+    .fa_icons .linkedin{
+        color: white;
+        background-color: rgb(69, 125, 245);
+        border-radius: 2.6rem;
+        font-size: 1.3rem;
+        display: inline-block;
+        text-align: center;
+        margin: 10px;
+        width: 2.6rem;
+        height: 2.6rem;
+        line-height: 2.6rem;
+        margin: 0 5px 10px;
+    }
+    .fa_icons .linkedin:hover{
+        background-color: rgb(0, 0, 0);
+    }
+    .fa_icons .twitter{
+        color: white;
+        background-color: rgb(25, 153, 228);
+        border-radius: 2.6rem;
+        font-size: 1.3rem;
+        display: inline-block;
+        text-align: center;
+        margin: 10px;
+        width: 2.6rem;
+        height: 2.6rem;
+        line-height: 2.6rem;
+        margin: 0 5px 10px;
+    }
+    .fa_icons .twitter:hover{
+        background-color: rgb(0, 0, 0);
+    }
+    
 
-.fa_icons .insta{
-    color: white;
-    background-color: rgb(51, 47, 47);
-    border-radius: 2.6rem;
-    font-size: 1.3rem;
-    display: inline-block;
-    text-align: center;
-    margin: 10px;
-    width: 2.6rem;
-    height: 2.6rem;
-    line-height: 2.6rem;
-    margin: 0 5px 10px;
-    /* padding: 10px 14px 10px 14px; */
-    /* margin-top: 10px; */
-}
-.fa_icons .insta:hover{
-    background-color: rgb(0, 0, 0);
-}
-.fa_icons .github{
-    color: white;
-    background-color: rgb(54, 52, 52);
-    border-radius: 2.6rem;
-    font-size: 1.3rem;
-    display: inline-block;
-    text-align: center;
-    margin: 10px;
-    width: 2.6rem;
-    height: 2.6rem;
-    line-height: 2.6rem;
-    margin: 0 5px 10px;
-}
+    /* Skills icon  */
+    .jsgif{
+        width: 70px;
+        height: 70px;
+        border-radius: 10rem 5rem ; 
+    }
+    
+    .csspng{
+        width: 70px;
+        height: 70px;
+        
+         
 
-.fa_icons .github:hover{
-    background-color: rgb(0, 0, 0);
-}
-.fa_icons .linkedin{
-    color: white;
-    background-color: rgb(69, 125, 245);
-    border-radius: 2.6rem;
-    font-size: 1.3rem;
-    display: inline-block;
-    text-align: center;
-    margin: 10px;
-    width: 2.6rem;
-    height: 2.6rem;
-    line-height: 2.6rem;
-    margin: 0 5px 10px;
-}
-.fa_icons .linkedin:hover{
-    background-color: rgb(0, 0, 0);
-}
-.fa_icons .twitter{
-    color: white;
-    background-color: rgb(25, 153, 228);
-    border-radius: 2.6rem;
-    font-size: 1.3rem;
-    display: inline-block;
-    text-align: center;
-    margin: 10px;
-    width: 2.6rem;
-    height: 2.6rem;
-    line-height: 2.6rem;
-    margin: 0 5px 10px;
-}
-.fa_icons .twitter:hover{
-    background-color: rgb(0, 0, 0);
-}
+    }
+    .htmlsvg{
+        width: 70px;
+        height: 70px;
+         
+
+    }
+    .htmlsvg :hover{
+        
+         
+
+    }
 
 
-.design{
-    background-color: red;
-}
+    .reactgif{
+        width: 70px;
+        height: 70px;
+        padding-right: 5px;
+        padding-left: 5px;
+        
+
+    }
+    .phppng{
+        width: 80px;
+        height: 80px;
+        
+
+    }
+    .bootspng{
+        width: 70px;
+        height: 70px;
+        
+
+    }
+    .phpmyadminpng{
+        width: 70px;
+        height: 70px;
+        
+
+    }
+    
+    @media only screen and (max-width: 600px) {
+        #intro {
+           padding-top: 30px;
+           margin-right: 30px;
+            padding-top: 10px;
+            padding-left: 0px;
+            padding-right: 0px;
+            text-align: center;
+
+        }
+    }
+
+    @media only screen and (max-width: 1300px) {
+        .intro {
+           font-size: 40px;
+        }
+    }
+    @media only screen and (max-width: 700px) {
+        .intro {
+           font-size: 30px;
+        }
+    }
+    @media only screen and (max-width: 1300px) {
+        .introSubtitle {
+           font-size: 16px;
+           line-height: 30px;
+        }
+    }
+    @media only screen and (max-width: 900px) {
+        .img1 {
+           padding-left: 0px;
+           padding-right: 0px;
+        }
+    }
+  
