--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -59,9 +59,10 @@
 
 .introSubtitle{
     font-family: "Gill Sans", sans-serif;
-    font-size: 30px;
+    font-size: 18px;
+    font-weight: 600;
     margin-right: 40px;
-    line-height: 3rem;
+    line-height: 1.5rem;
     padding-bottom: 10px;
     color: #7f878f;
 }
@@ -140,6 +141,15 @@
     }
     .fa_icons .twitter:hover{
         background-color: rgb(0, 0, 0);
+    }
+
+    .btn{
+        color: rgb(255, 255, 255);
+        font-weight: 500;
+        background-color: rgb(90, 51, 163);
+        padding: 5px 12px 5px 12px;
+        border-radius: 6px;
+
     }
     
 
@@ -225,6 +235,17 @@
 
         }
     }
+    @media only screen and (max-width: 600px) {
+    .btn{
+        color: rgb(255, 255, 255);
+        font-weight: 500;
+        
+        background-color: rgb(90, 51, 163);
+        padding: 3px 8px 3px 8px;
+        border-radius: 6px;
+
+    }
+}
 
     @media only screen and (max-width: 1300px) {
         .intro {
